0.11C
- Disable `ChannelComplainerByLowSuccessPerDay` for now.
- Adjust our judgment of "low onchain fee" downward (i.e. cheaper) slightly, from 25% +/-5% to 20% +/-3%.
- `ActiveProber` now only does a 2-hop probe always.
- `ChannelComplainerByLowSuccessPerDay` logs a little more on debug prints.
- Tweak parameters for auto-close slightly, being more lenient.
- Fix FreeBSD compile.

0.11B
- `ActiveProber` now also has a background cleaner of its payments.
- `ChannelCreationDecider` now holds off on creating channels if the onchain amount is small relative to all your funds and is small for a "large" channel (~0.16777215 BTC).  This should prevent CLBOSS from making lots of 10mBTC channels when your node is well-funded.
- CLBOSS can now close bad channels.  Enable this ***EXPERIMENTAL*** feature by passing `--clboss-auto-close=true` option to `lightningd`.  If enabled, the `clboss-unmanage` command can disable this for particular peers using the `close` key.
- Remove `libsodium` library, instead use SHA256 implementation from Bitcoin and our own code for basic securtiy issues.
- Add `clboss-unmanage` command to suppress certain aspects of auto-management.
- Fix `InitialRebalancer` bug (introduced in 0.11A) which completely disables it instead of throttling it.

0.11A
- Make `FundsMover` much less willing to pay extra for more private randomized routes.
- New `EarningsRebalancer` is now the primary rebalancer to replace the role of `InitialRebalancer` in previous releases; it will base its rebalancing decisions on earnings of each channel.
- `InitialRebalancer` will now limit how much it will spend on rebalances, as it is intended for the *initial* rebalancing of new channels.
- `FundsMover` is now more parsimonious about its fee budget when it splits moved funding attempts.
- Avoid making multiple channels to nodes with the same IP bin.
- Fix MacOS compile.